syntax = "proto3";

package translator;

option go_package = "./pkg/pb";

service TranslatorService {
  rpc Translate(TranslateRequest) returns (TranslateResponse) {}
}

// Translate

message TranslateRequest {
  string message = 1;
  string fromLang = 2;
  string toLang = 3;
}

message TranslateResponse {
  int64 status = 1;
  string error = 2;
  string translation = 3;
}
